[gd_scene load_steps=7 format=3 uid="uid://bxiw1dn02gy4g"]

[ext_resource type="Script" path="res://scenes/title_action.gd" id="1_kq76x"]
[ext_resource type="StyleBox" uid="uid://tqnakpaq4vk2" path="res://themes/boxes/title_action_background_blue.tres" id="2_s8asg"]
[ext_resource type="Theme" uid="uid://ddpx351m2ye8v" path="res://themes/fe_font.tres" id="2_y44fm"]
[ext_resource type="Texture2D" uid="uid://bitcbwjbsqpxy" path="res://trash-can.svg" id="3_3lupj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_joibv"]
bg_color = Color(1, 1, 1, 1)
border_width_bottom = 5
border_color = Color(0.635294, 0.686275, 0.690196, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_460mx"]
bg_color = Color(0.0509804, 0.427451, 0.976471, 1)
border_width_bottom = 5
border_color = Color(0.141176, 0.321569, 0.65098, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Action" type="Button"]
offset_right = 272.0
offset_bottom = 175.0
theme_override_styles/normal = SubResource("StyleBoxFlat_joibv")
theme_override_styles/focus = SubResource("StyleBoxFlat_460mx")
script = ExtResource("1_kq76x")

[node name="ActionSplitter" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="ActionSplitter"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="BackgroundColor" type="Panel" parent="ActionSplitter/Margin"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_s8asg")

[node name="Icon" type="TextureRect" parent="ActionSplitter/Margin"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("3_3lupj")
expand_mode = 1
stretch_mode = 5

[node name="Margin2" type="MarginContainer" parent="ActionSplitter"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ActionName" type="Label" parent="ActionSplitter/Margin2"]
layout_mode = 2
theme = ExtResource("2_y44fm")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Action"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
